--- a/package.json
+++ b/package.json
@@ -1,28 +1,16 @@
 {
-  "name": "desktop-pet",
+  "name": "barnyard-server",
   "version": "1.0.0",
-  "description": "",
+  "description": "Multiplayer server for Barnyard Betrayal",
   "main": "server.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "express": "^5.2.1",
-    "socket.io": "^4.8.3"
-  },
-  {
-  "name": "barnyard-betrayal",
-  "version": "1.0.0",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
     "express": "^4.18.2",
     "socket.io": "^4.7.2"
+  },
+  "engines": {
+    "node": ">=14.0.0"
   }
-}
 }
